--- a/mainwindow2.ui
+++ b/mainwindow2.ui
@@ -1,146 +1,60 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <ui version="4.0">
- <class>MainWindow</class>
- <widget class="QMainWindow" name="MainWindow">
+ <class>MainWindow2</class>
+ <widget class="QMainWindow" name="MainWindow2">
   <property name="geometry">
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>747</width>
-    <height>455</height>
+    <width>854</width>
+    <height>501</height>
    </rect>
   </property>
   <property name="windowTitle">
    <string>Qtmus</string>
   </property>
-  <widget class="QWidget" name="centralWidget">
+  <widget class="QWidget" name="centralwidget">
    <layout class="QVBoxLayout" name="verticalLayout_4">
     <item>
-     <widget class="QTabWidget" name="LibraryQTW">
-      <property name="sizePolicy">
-       <sizepolicy hsizetype="Preferred" vsizetype="MinimumExpanding">
-        <horstretch>0</horstretch>
-        <verstretch>0</verstretch>
-       </sizepolicy>
-      </property>
-      <property name="currentIndex">
-       <number>0</number>
-      </property>
-      <property name="documentMode">
-       <bool>false</bool>
-      </property>
-      <property name="movable">
-       <bool>false</bool>
-      </property>
-      <widget class="QWidget" name="artist_album">
-       <attribute name="title">
-        <string>Artiste / Album</string>
-       </attribute>
-       <layout class="QVBoxLayout" name="verticalLayout_2">
-        <item>
-         <widget class="QColumnView" name="artistAlbumColumnView"/>
-        </item>
-       </layout>
-      </widget>
-      <widget class="QWidget" name="library">
-       <attribute name="title">
-        <string>Library</string>
-       </attribute>
-       <layout class="QVBoxLayout" name="verticalLayout">
-        <item>
-         <widget class="QListView" name="libraryListView"/>
-        </item>
-       </layout>
-      </widget>
-      <widget class="QWidget" name="playlist">
-       <attribute name="title">
-        <string>Playlist</string>
-       </attribute>
-       <layout class="QVBoxLayout" name="verticalLayout_5">
-        <item>
-         <widget class="QListView" name="playlistListView"/>
-        </item>
-       </layout>
-      </widget>
-      <widget class="QWidget" name="playQueue">
-       <attribute name="title">
-        <string>Play Queue</string>
-       </attribute>
-       <layout class="QVBoxLayout" name="verticalLayout_6">
-        <item>
-         <widget class="QListView" name="playQueueListView"/>
-        </item>
-       </layout>
-      </widget>
-      <widget class="QWidget" name="broswer">
-       <attribute name="title">
-        <string>Browser</string>
-       </attribute>
-       <layout class="QVBoxLayout" name="verticalLayout_7">
-        <item>
-         <widget class="QWidget" name="widget_4" native="true">
-          <property name="sizePolicy">
-           <sizepolicy hsizetype="Preferred" vsizetype="Minimum">
-            <horstretch>0</horstretch>
-            <verstretch>0</verstretch>
-           </sizepolicy>
-          </property>
-          <layout class="QHBoxLayout" name="horizontalLayout_5">
+     <widget class="QWidget" name="widget_4" native="true">
+      <layout class="QHBoxLayout" name="horizontalLayout_5">
+       <property name="leftMargin">
+        <number>0</number>
+       </property>
+       <property name="rightMargin">
+        <number>0</number>
+       </property>
+       <item>
+        <widget class="QTreeView" name="libraryTreeView"/>
+       </item>
+       <item>
+        <widget class="QTabWidget" name="playQLTabWidget">
+         <property name="currentIndex">
+          <number>1</number>
+         </property>
+         <widget class="QWidget" name="playQueue">
+          <attribute name="title">
+           <string>Play Queue</string>
+          </attribute>
+          <layout class="QVBoxLayout" name="verticalLayout">
            <item>
-            <widget class="QLabel" name="adressLabel_2">
-             <property name="text">
-              <string>Location:</string>
-             </property>
-            </widget>
-           </item>
-           <item>
-            <widget class="QLineEdit" name="adressLineEdit_2"/>
-           </item>
-           <item>
-            <widget class="QPushButton" name="OkPushButton_2">
-             <property name="text">
-              <string>Ok</string>
-             </property>
-            </widget>
+            <widget class="QListView" name="listView"/>
            </item>
           </layout>
          </widget>
-        </item>
-        <item>
-         <widget class="QTreeView" name="BrowserTreeView"/>
-        </item>
-       </layout>
-      </widget>
-      <widget class="QWidget" name="libraryFilters">
-       <attribute name="title">
-        <string>Library Filters</string>
-       </attribute>
-       <layout class="QVBoxLayout" name="verticalLayout_8"/>
-      </widget>
-      <widget class="QWidget" name="settings">
-       <attribute name="title">
-        <string>Settings</string>
-       </attribute>
-       <layout class="QVBoxLayout" name="verticalLayout_9">
-        <item>
-         <widget class="QTabWidget" name="settingsTabWidget">
-          <property name="currentIndex">
-           <number>0</number>
-          </property>
-          <widget class="QWidget" name="tab">
-           <attribute name="title">
-            <string>Tab 1</string>
-           </attribute>
-          </widget>
-          <widget class="QWidget" name="tab_2">
-           <attribute name="title">
-            <string>Tab 2</string>
-           </attribute>
-          </widget>
+         <widget class="QWidget" name="playlist">
+          <attribute name="title">
+           <string>PLaylist</string>
+          </attribute>
+          <layout class="QVBoxLayout" name="verticalLayout_2">
+           <item>
+            <widget class="QListView" name="listView_2"/>
+           </item>
+          </layout>
          </widget>
-        </item>
-       </layout>
-      </widget>
+        </widget>
+       </item>
+      </layout>
      </widget>
     </item>
     <item>
@@ -346,38 +260,17 @@
     </item>
    </layout>
   </widget>
-  <widget class="QToolBar" name="mainToolBar">
-   <attribute name="toolBarArea">
-    <enum>TopToolBarArea</enum>
-   </attribute>
-   <attribute name="toolBarBreak">
-    <bool>false</bool>
-   </attribute>
-  </widget>
-  <widget class="QMenuBar" name="menuBar">
+  <widget class="QMenuBar" name="menubar">
    <property name="geometry">
     <rect>
      <x>0</x>
      <y>0</y>
-     <width>747</width>
+     <width>854</width>
      <height>21</height>
     </rect>
    </property>
-   <widget class="QMenu" name="menuFile">
-    <property name="title">
-     <string>File</string>
-    </property>
-    <addaction name="actionQuit"/>
-   </widget>
-   <addaction name="menuFile"/>
   </widget>
-  <action name="actionQuit">
-   <property name="text">
-    <string>Quit</string>
-   </property>
-  </action>
  </widget>
- <layoutdefault spacing="6" margin="11"/>
  <resources/>
  <connections/>
 </ui>
