--- a/mainwindow2.ui
+++ b/mainwindow2.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>854</width>
-    <height>501</height>
+    <width>636</width>
+    <height>432</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -265,11 +265,41 @@
     <rect>
      <x>0</x>
      <y>0</y>
-     <width>854</width>
+     <width>636</width>
      <height>21</height>
     </rect>
    </property>
+   <widget class="QMenu" name="menuFile">
+    <property name="title">
+     <string>File</string>
+    </property>
+    <addaction name="actionQuit"/>
+    <addaction name="actionQuit_2"/>
+   </widget>
+   <widget class="QMenu" name="menuEdit">
+    <property name="title">
+     <string>Edit</string>
+    </property>
+    <addaction name="actionSettingqs"/>
+   </widget>
+   <addaction name="menuFile"/>
+   <addaction name="menuEdit"/>
   </widget>
+  <action name="actionQuit">
+   <property name="text">
+    <string>Open</string>
+   </property>
+  </action>
+  <action name="actionSettingqs">
+   <property name="text">
+    <string>Settings</string>
+   </property>
+  </action>
+  <action name="actionQuit_2">
+   <property name="text">
+    <string>Quit</string>
+   </property>
+  </action>
  </widget>
  <resources/>
  <connections/>
